--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    
+    <!--  add Bootdstrap lets see if defer works otherwise i need to putt it at the end of body (link </body)  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% block head %}
     {% endblock %}
 </head>
 <body>
-    <header class="nav-bar">
+    <!-- <header class="nav-bar">
         <nav class="nav-list">
             <a href="{{ url_for('home') }}">home</a>
             <a href="{{ url_for('base') }}">base</a>
@@ -16,8 +20,19 @@
         </nav>
         <nav class="nav-login-menu">
             <a href="">login</a>
+            <a href="">new acount</a>
         </nav>
-    </header>
+    </header> -->
+    <!-- botstrap nav -->
+    
+    {% include "navbar.html" %}
+
+
+
+
+
+
+    
     <div class="content">
         {% block content %}
         {% endblock %}
