failed to add database

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,6 +11,7 @@
             <a class="nav-link active" aria-current="page" href="{{ url_for('base') }}">base</a>
             <a class="nav-link active" aria-current="page" href="{{ url_for('username', name='kevin') }}">user</a>
             <a class="nav-link active" aria-current="page" href="{{ url_for('name') }}">name</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('adduser') }}">adduser</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
