--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,12 @@
     <!--  add Bootdstrap lets see if defer works otherwise i need to putt it at the end of body (link </body)  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <!-- add one js file -->
+
+    <script defer src=" {{ url_for('static', filename='script.js') }}"></script>
+
+
     {% block head %}
     {% endblock %}
 </head>
@@ -26,13 +32,10 @@
     <!-- botstrap nav -->
     
     {% include "navbar.html" %}
-
-
-
-
-
-
     
+    <div>
+        <p id="jstest">tests if js is working it should be in red or green</p>
+    </div>
     <div class="content">
         {% block content %}
         {% endblock %}
