--- a/templates/name.html
+++ b/templates/name.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 
+{% for massege in get_flashed_messages() %}
+
+    <p>Hey {{ name }} - {{ massege }}</p>
+
+{% endfor %}
+
+
 {% if name %}
     <h1>Hallo {{ name}}!!</h1>
 {% else %}
